--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,5 +1,7 @@
 /* @import './components/container.css'; */
 
+@import 'swiper/css/bundle';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
