--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -14,3 +14,9 @@
 .swiper-slide-active {
     @apply opacity-100;
 }
+
+.appearance-none::-webkit-outer-spin-button,
+.appearance-none::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
